// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkInsertDocSchema should compare the inserted doc with the schema definition 1`] = `
"Invalid document structure. 
Class has been initialized with the following schema: 

{
  \\"quote\\": \\"string\\",
  \\"author\\": \\"string\\"
}

but found the following doc:

{
  \\"quote\\": \\"hello, world!\\",
  \\"author\\": true
}"
`;

exports[`checkInsertDocSchema should compare the inserted doc with the schema definition 2`] = `
"Invalid document structure. 
Class has been initialized with the following schema: 

{
  \\"quote\\": \\"string\\",
  \\"author\\": \\"string\\"
}

but found the following doc:

{
  \\"quote\\": \\"hello, world!\\",
  \\"authors\\": \\"author should be singular\\"
}"
`;

exports[`checkInsertDocSchema should compare the inserted doc with the schema definition 3`] = `
"Invalid document structure. 
Class has been initialized with the following schema: 

{
  \\"quote\\": \\"string\\",
  \\"author\\": \\"string\\"
}

but found the following doc:

{
  \\"quote\\": \\"hello, world!\\",
  \\"foo\\": {
    \\"bar\\": 10
  }
}"
`;

exports[`defaultLanguage should throw an error if the desired language is not supported 1`] = `
"Language \\"latin\\" is not supported.
Supported languages are:
 - dutch
 - english
 - french
 - italian
 - norwegian
 - portugese
 - russian
 - spanish
 - swedish"
`;

exports[`defaultLanguage should throw an error if the desired language is not supported during insertion 1`] = `
"Language \\"latin\\" is not supported.
Supported languages are:
 - dutch
 - english
 - french
 - italian
 - norwegian
 - portugese
 - russian
 - spanish
 - swedish"
`;
